Adjusts code to support generic OgnlContext